added phone auth :: TODO : test and firepush

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Fetch</string>
     <string name="select">Select</string>
+    <string name="title_activity_login">Sign in</string>
+
+
 </resources>
